<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/comment_vous_d_finiriez_vous"
        android:textAlignment="center"
        android:textSize="36sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbtn1"
            android:layout_width="227dp"
            android:layout_height="67dp"
            android:text="@string/fougueux"
            android:textSize="36sp" />

        <RadioButton
            android:id="@+id/rbtn2"
            android:layout_width="227dp"
            android:layout_height="67dp"
            android:text="@string/peureux"
            android:textSize="36sp" />

        <RadioButton
            android:id="@+id/rbtn3"
            android:layout_width="227dp"
            android:layout_height="67dp"
            android:text="@string/fourbe"
            android:textSize="36sp" />

        <RadioButton
            android:id="@+id/rbtn4"
            android:layout_width="295dp"
            android:layout_height="67dp"
            android:text="@string/un_peu_foufou"
            android:textSize="36sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnDroit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:text="@string/DirDroite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGauche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="64dp"
        android:text="@string/DirGauch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>