<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuestion2">

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="19dp"
        android:text="@string/comment_pr_f_res_tu_vivre"
        android:textAlignment="center"
        android:textSize="36sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="118dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestion">

        <RadioButton
            android:id="@+id/rbtn1"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/seul_au_monde"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbtn2"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:text="@string/je_pr_f_re_la_compagnie_des_animaux"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbtn3"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:text="@string/plus_on_est_de_fous_plus_on_rit"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbtn4"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:text="@string/j_alterne_entre_solitude_et_changes_avec_mes_amis"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnGauche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="40dp"
        android:text="@string/DirGauch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDroit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="40dp"
        android:text="@string/DirDroite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>