<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuestion5">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/mon_arme_favorite"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015"
        tools:text="mon arme favorite  " />

    <Button
        android:id="@+id/btnDroit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:text="@string/DirDroite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGauche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="64dp"
        android:text="@string/DirGauch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="120dp"
        android:layout_height="101dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngegg" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="120dp"
        android:layout_height="101dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img2"
        app:srcCompat="@drawable/bow" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="120dp"
        android:layout_height="101dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img1"
        app:srcCompat="@drawable/shilde" />

    <ImageView
        android:id="@+id/img4"
        android:layout_width="120dp"
        android:layout_height="101dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img3"
        app:srcCompat="@drawable/sword" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28">

        <RadioButton
            android:id="@+id/rbtn1"
            android:layout_width="192dp"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/une_grosse_boule_de_feu"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/rbtn2"
            android:layout_width="216dp"
            android:layout_height="112dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/la_meilleur_attaque_c_est_la_d_fance"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/rbtn3"
            android:layout_width="174dp"
            android:layout_height="119dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:text="@string/j_aime_mes_nemies_mort_loin"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/rbtn4"
            android:layout_width="217dp"
            android:layout_height="101dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:text="@string/j_aime_les_voir_agoniser_sous_mes_yeux"
            android:textSize="26sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>