<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuestion4"
    tools:layout_editor_absoluteX="-4dp"
    tools:layout_editor_absoluteY="43dp">

    <Button
        android:id="@+id/btnDroit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="40dp"
        android:text="@string/DirDroite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGauche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="40dp"
        android:text="@string/DirGauch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="57dp"
        android:text="@string/checkbox"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="42dp"
        android:text="@string/checkbox"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="@+id/checkBox4"
        app:layout_constraintStart_toStartOf="@+id/checkBox4"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="42dp"
        android:text="@string/checkbox"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox3"
        app:layout_constraintEnd_toEndOf="@+id/checkBox3"
        app:layout_constraintStart_toStartOf="@+id/checkBox3"
        app:layout_constraintTop_toTopOf="@+id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="126dp"
        android:text="@string/checkbox"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="@+id/checkBox2"
        app:layout_constraintStart_toStartOf="@+id/checkBox2"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/lors_d_un_combat"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Lors d'un combat :   " />

</androidx.constraintlayout.widget.ConstraintLayout>