<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuestion3">

    <ImageButton
        android:id="@+id/btnPiltover"
        android:layout_width="126dp"
        android:layout_height="139dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/todo"
        android:src="@drawable/piltover_crest_icon"
        app:layout_constraintStart_toEndOf="@+id/btnFreljord"
        app:layout_constraintTop_toBottomOf="@+id/btnNoxus"
        tools:src="@drawable/piltover_crest_icon"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/btnNoxus"
        android:layout_width="117dp"
        android:layout_height="139dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/noxus_crest_icon"
        app:layout_constraintStart_toEndOf="@+id/btnDemacia"
        app:layout_constraintTop_toBottomOf="@+id/btnTargon"
        tools:src="@drawable/noxus_crest_icon"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/btnTargon"
        android:layout_width="111dp"
        android:layout_height="132dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/mt_targon_crest_icon"
        app:layout_constraintStart_toEndOf="@+id/btnBilgewater"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestion3"
        tools:src="@drawable/mt_targon_crest_icon"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/btnShurima"
        android:layout_width="113dp"
        android:layout_height="139dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/todo"
        android:src="@drawable/shurima_crest_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIonia"
        tools:src="@drawable/shurima_crest_icon"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/btnIonia"
        android:layout_width="94dp"
        android:layout_height="126dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/iona_crest_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBundle"
        tools:src="@drawable/iona_crest_icon"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/btnBundle"
        android:layout_width="108dp"
        android:layout_height="124dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/bandle_city_crest_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestion3"
        tools:src="@drawable/bandle_city_crest_icon"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtQuestion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quelle_image_vous_parle_le_plus"
        android:textAlignment="center"
        android:textSize="36sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGauche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:text="@string/DirGauch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageButton
        android:id="@+id/btnBilgewater"
        android:layout_width="72dp"
        android:layout_height="117dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/bilgewater_crest_icon"
        app:layout_constraintStart_toEndOf="@+id/btnBundle"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestion3"
        tools:src="@drawable/bilgewater_crest_icon"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/btnFreljord"
        android:layout_width="113dp"
        android:layout_height="139dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/freljord"
        app:layout_constraintStart_toEndOf="@+id/btnShurima"
        app:layout_constraintTop_toBottomOf="@+id/btnDemacia"
        tools:src="@drawable/freljord"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/btnDemacia"
        android:layout_width="110dp"
        android:layout_height="134dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/demacia_crest_icon"
        app:layout_constraintStart_toEndOf="@+id/btnIonia"
        app:layout_constraintTop_toBottomOf="@+id/btnBilgewater"
        tools:src="@drawable/demacia_crest_icon"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>